hphp/hack/test/package_v2/package_access/cross_package_access_internal1.php--foo.php
<?hh
// package pkg2
module foo;
internal type TFoo = int;
